force-app/main/default/objects/Title_Iv_E__c/Title_Iv_E__c.object-meta.xml
<CustomObject>
    <label>Title -Iv E</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Title -Iv E Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Title -Iv E S</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>