force-app/main/default/objects/Title_Iv_E__c/fields/Age_How_verified__c.field-meta.xml
<CustomField>
    <fullName>Age_How_verified__c</fullName>
    <label>Age: How verified?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>