force-app/main/default/objects/Title_Iv_E__c/fields/Agency_opted_to_suspend_SSI_claim_IV_E__c.field-meta.xml
<CustomField>
    <fullName>Agency_opted_to_suspend_SSI_claim_IV_E__c</fullName>
    <inlineHelpText>Has the agency opted to suspend the SSI payment and claim IV-E?</inlineHelpText>
    <label>Agency opted to suspend SSI &amp; claim IV-E</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>