force-app/main/default/objects/Title_Iv_E__c/fields/ApprovalButton__c.field-meta.xml
<CustomField>
    <fullName>ApprovalButton__c</fullName>
    <formula>NOT(OR(ISPICKVAL(Status__c, &apos;Submitted&apos;) ,ISPICKVAL(Status__c, &apos;Approved&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ApprovalButton</label>
    <type>Checkbox</type>
</CustomField>