force-app/main/default/objects/Title_Iv_E__c/fields/Asset_AssetValue__c.field-meta.xml
<CustomField>
    <fullName>Asset_AssetValue__c</fullName>
    <label>Asset AssetValue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>