force-app/main/default/objects/Title_Iv_E__c/fields/Asset_Information_How_verified__c.field-meta.xml
<CustomField>
    <fullName>Asset_Information_How_verified__c</fullName>
    <label>Asset Information: How verified?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>