force-app/main/default/objects/Title_Iv_E__c/fields/CalloutDateTime__c.field-meta.xml
<CustomField>
    <fullName>CalloutDateTime__c</fullName>
    <label>CalloutDate&amp;Time</label>
    <type>DateTime</type>
</CustomField>