force-app/main/default/objects/Title_Iv_E__c/fields/Child_Removal__c.field-meta.xml
<CustomField>
    <fullName>Child_Removal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Removal</label>
    <referenceTo>Child_Removal__c</referenceTo>
    <relationshipLabel>Title -Iv E S</relationshipLabel>
    <relationshipName>Title_Iv_E_S</relationshipName>
    <type>Lookup</type>
</CustomField>