force-app/main/default/objects/Title_Iv_E__c/fields/CourtStatus_Message__c.field-meta.xml
<CustomField>
    <fullName>CourtStatus_Message__c</fullName>
    <label>CourtStatus Message</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>