force-app/main/default/objects/Title_Iv_E__c/fields/CourtStatus_RemDtEarlierThnCtOrderDt__c.field-meta.xml
<CustomField>
    <fullName>CourtStatus_RemDtEarlierThnCtOrderDt__c</fullName>
    <label>CourtStatus RemDtEarlierThnCtOrderDt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>