force-app/main/default/objects/Title_Iv_E__c/fields/CourtStatus_Status__c.field-meta.xml
<CustomField>
    <fullName>CourtStatus_Status__c</fullName>
    <label>CourtStatus Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PASS</fullName>
            </value>
            <value>
                <fullName>FAIL</fullName>
            </value>
            <value>
                <fullName>MISSING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>