force-app/main/default/objects/Title_Iv_E__c/fields/Demographics_AgeDuringAFDCmonth__c.field-meta.xml
<CustomField>
    <fullName>Demographics_AgeDuringAFDCmonth__c</fullName>
    <label>Demographics AgeDuringAFDCmonth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>