force-app/main/default/objects/Title_Iv_E__c/fields/Demographics_HasTheAgencyOptedToSuspend__c.field-meta.xml
<CustomField>
    <fullName>Demographics_HasTheAgencyOptedToSuspend__c</fullName>
    <label>Demographics HasTheAgencyOptedToSuspend</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>