force-app/main/default/objects/Title_Iv_E__c/fields/Demographics_Message__c.field-meta.xml
<CustomField>
    <fullName>Demographics_Message__c</fullName>
    <label>Demographics Message</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>