force-app/main/default/objects/Title_Iv_E__c/fields/Deprivation_DepParentalSupp__c.field-meta.xml
<CustomField>
    <fullName>Deprivation_DepParentalSupp__c</fullName>
    <label>Deprivation DepParentalSupp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>