force-app/main/default/objects/Title_Iv_E__c/fields/Deprivation_DeprivationFactor__c.field-meta.xml
<CustomField>
    <fullName>Deprivation_DeprivationFactor__c</fullName>
    <label>Deprivation DeprivationFactor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Absence</fullName>
            </value>
            <value>
                <fullName>Death of Either Parent</fullName>
            </value>
            <value>
                <fullName>Incapacity</fullName>
            </value>
            <value>
                <fullName>Unemployment</fullName>
            </value>
            <value>
                <fullName>Underemployment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>