force-app/main/default/objects/Title_Iv_E__c/fields/Eligible_Status__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Status__c</fullName>
    <label>Eligible Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Ineligible</fullName>
            </value>
            <value>
                <fullName>Eligible Reimbursable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>