force-app/main/default/objects/Title_Iv_E__c/fields/FamilySizeAndSona_FamilySize__c.field-meta.xml
<CustomField>
    <fullName>FamilySizeAndSona_FamilySize__c</fullName>
    <label>FamilySizeAndSona FamilySize</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>