force-app/main/default/objects/Title_Iv_E__c/fields/FamilySizeAndSona_Sona__c.field-meta.xml
<CustomField>
    <fullName>FamilySizeAndSona_Sona__c</fullName>
    <label>FamilySizeAndSona Sona</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>