force-app/main/default/objects/Title_Iv_E__c/fields/FinalStatus__c.field-meta.xml
<CustomField>
    <fullName>FinalStatus__c</fullName>
    <label>FinalStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DATA MISSING/INCOMPLETE</fullName>
            </value>
            <value>
                <fullName>NON-ELIGIBLE FOR A REIMBURSEMENT</fullName>
            </value>
            <value>
                <fullName>ELIGIBLE FOR A REIMBURSEMENT</fullName>
            </value>
            <value>
                <fullName>INCOMPLETE</fullName>
            </value>
            <value>
                <fullName>MISSING INFO</fullName>
                <isActive>false</isActive>
                <label>MISSING INFO</label>
            </value>
            <value>
                <fullName>null</fullName>
                <isActive>false</isActive>
                <label>null</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>