force-app/main/default/objects/Title_Iv_E__c/fields/First_Time_Redetermination__c.field-meta.xml
<CustomField>
    <fullName>First_Time_Redetermination__c</fullName>
    <label>First Time Redetermination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>