force-app/main/default/objects/Title_Iv_E__c/fields/Income_TotalAvailableIncome__c.field-meta.xml
<CustomField>
    <fullName>Income_TotalAvailableIncome__c</fullName>
    <label>Income TotalAvailableIncome</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>