force-app/main/default/objects/Title_Iv_E__c/fields/Is_IV_E_agency_responsible_for_placement__c.field-meta.xml
<CustomField>
    <fullName>Is_IV_E_agency_responsible_for_placement__c</fullName>
    <label>Is IV-E agency responsible for placement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>