force-app/main/default/objects/Title_Iv_E__c/fields/Is_Living_Arrangement_same_as_Placement__c.field-meta.xml
<CustomField>
    <fullName>Is_Living_Arrangement_same_as_Placement__c</fullName>
    <label>Is Living Arrangement same as Placement?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>