force-app/main/default/objects/Title_Iv_E__c/fields/IsThe_Agency_TheRepresentativePayee__c.field-meta.xml
<CustomField>
    <fullName>IsThe_Agency_TheRepresentativePayee__c</fullName>
    <label>IsThe Agency TheRepresentativePayee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>