force-app/main/default/objects/Title_Iv_E__c/fields/IV_E_case_has_income_assets_of_AU_member__c.field-meta.xml
<CustomField>
    <fullName>IV_E_case_has_income_assets_of_AU_member__c</fullName>
    <inlineHelpText>Does the IV-E case/record contain financial information citing income and resources/assets of all assistance unit members?</inlineHelpText>
    <label>IV-E case has income&amp;assets of AU member</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No(Request Information from the case worker and place documentation in IV-E record/case)</fullName>
            </value>
            <value>
                <fullName>Not Verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>