force-app/main/default/objects/Title_Iv_E__c/fields/IV_E_Specialist_Signature__c.field-meta.xml
<CustomField>
    <fullName>IV_E_Specialist_Signature__c</fullName>
    <label>IV-E Specialist Signature</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>