force-app/main/default/objects/Title_Iv_E__c/fields/IV_E_Specialist_Signature_Date__c.field-meta.xml
<CustomField>
    <fullName>IV_E_Specialist_Signature_Date__c</fullName>
    <label>IV-E Specialist Signature Date</label>
    <type>Date</type>
</CustomField>