force-app/main/default/objects/Title_Iv_E__c/fields/Placement__c.field-meta.xml
<CustomField>
    <fullName>Placement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Placement</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Title -Iv E S</relationshipLabel>
    <relationshipName>Title_Iv_E_S</relationshipName>
    <type>Lookup</type>
</CustomField>