force-app/main/default/objects/Title_Iv_E__c/fields/Placement_Message__c.field-meta.xml
<CustomField>
    <fullName>Placement_Message__c</fullName>
    <label>Placement Message</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>