force-app/main/default/objects/Title_Iv_E__c/fields/RemovalType_Message__c.field-meta.xml
<CustomField>
    <fullName>RemovalType_Message__c</fullName>
    <label>RemovalType Message</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>