force-app/main/default/objects/Title_Iv_E__c/fields/RemovalType_Status__c.field-meta.xml
<CustomField>
    <fullName>RemovalType_Status__c</fullName>
    <label>RemovalType Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>