force-app/main/default/objects/Title_Iv_E__c/fields/Review_Period__c.field-meta.xml
<CustomField>
    <fullName>Review_Period__c</fullName>
    <label>Review Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>