force-app/main/default/objects/Title_Iv_E__c/fields/Review_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Period_End_Date__c</fullName>
    <label>Review Period End Date</label>
    <type>Date</type>
</CustomField>