force-app/main/default/objects/Title_Iv_E__c/fields/Service_Case__c.field-meta.xml
<CustomField>
    <fullName>Service_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Case</label>
    <referenceTo>Service_Case__c</referenceTo>
    <relationshipLabel>Title -Iv E S</relationshipLabel>
    <relationshipName>Title_Iv_E_S</relationshipName>
    <type>Lookup</type>
</CustomField>