force-app/main/default/objects/Title_Iv_E__c/fields/SSI_SSA_Information_How_verified__c.field-meta.xml
<CustomField>
    <fullName>SSI_SSA_Information_How_verified__c</fullName>
    <label>SSI/SSA Information: How verified?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>