force-app/main/default/objects/Title_Iv_E__c/fields/Title_Iv_E_steps__c.field-meta.xml
<CustomField>
    <fullName>Title_Iv_E_steps__c</fullName>
    <label>Title - Iv E steps</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>AFDC Relatedness</fullName>
            </value>
            <value>
                <fullName>Placement</fullName>
            </value>
            <value>
                <fullName>Other cetria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>